# tech-review

./: .gitignore  README.md
Algorithm/DynamicProgramming/: app  init.sh  makefile  memoized.cpp  memoized.h
Algorithm/DynamicProgramming/MemoizedCutRod/: .gitignore  CMakeLists.txt  build.sh  default.cpp  default.h  main.cpp  util.cpp  util.h
